# opengine

./: CMakeLists.txt
engine/: application.cpp  demo.cpp  game.cpp  game.h  main.cpp  menu.cpp  menu.h
engine/assets/Models/: 2high.mtl
src/: Vector3.cpp  Vector3.h  config.h  renderer.cpp  renderer.h  shader.h  texture.cpp  texture.h
src/Core/: .input.cpp.swp  .input.h.swp  core.cpp  core.h  input.cpp  input.h  scenemanager.cpp  scenemanager.h
src/Graphics/: color.cpp  light.cpp  light.h  skybox.h
src/Maths/: random.cpp  random.h  transform.h
src/Model/: mesh.h  model.h
src/Renderer/: .renderer.h.swo  .scene.cpp.swo  Color.h  actor.cpp  actor.h  camera.cpp  camera.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  shader.h
src/Texture/: FontLoader.cpp  FontLoader.h  Texture.cpp  Texture.h  texture.cpp
src/UI/: UICollection.cpp  UICollection.h  UIText.cpp  UIText.h
src/shaders/: SimpleFragmentShader.fs  SimpleVertexShader.vs
